<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="action_sign_in">Google Sign In</string>
    <string name="action_send_location">Send My Location</string>
    <string name="action_request_locations">Request Locations</string>
    <string name="action_update_device_token">Update Device Token</string>
    <string name="action_create_family">New Family</string>
    <string name="action_create_family_member">New Family Member</string>
    <string name="action_delete_family_member">Remove Family Member</string>
    <string name="action_send_invite">Send Invite</string>
    <string name="action_accept_invite">Accept</string>
    <string name="action_decline_invite">Decline</string>
    <string name="action_join_family">Join The Family</string>
    <string name="action_check_family_membership">Check Family Membership</string>
    <string name="action_i_am_major">I am a parent</string>
    <string name="action_i_am_minor">I am a child</string>
    <string name="action_exit_application">Exit application</string>
    <string name="action_thanks_no">Thanks, No</string>
    <string name="action_retry">Retry</string>
    <string name="action_cancel">Cancel</string>
    <string name="desc_page_background">Background Image</string>
    <string name="desc_front_image">Front Image</string>
    <string name="desc_thumbnail_image">Thumbnail Image</string>
    <string name="title_permission_not_granted">Permissions Not Granted</string>
    <string name="title_google_signin_canceled">Google Sign-In Canceled</string>
    <string name="title_google_signin_failed">Google Sign-In Failed</string>
    <string name="title_create_family_failed">Creating The Family Failed</string>
    <string name="title_join_family_failed">Joining The Family Failed</string>
    <string name="title_upgrade_backend_failed">Upgrading To The New App Version Failed</string>
    <string name="msg_invite_sent">Invite sent</string>
    <string name="msg_waiting_for_invite">Waiting for invite&#8230;</string>
    <string name="msg_invitation">%1$s has invited you to join the family</string>
    <string name="msg_upgrade_backend">Application is being updated&#8230;</string>
    <string name="msg_permission_not_granted">Required permission has not been granted. The app functions will be limited. Retry?</string>
    <string name="msg_google_unknown_error">Unknown error while signing in to Google. The app cannot proceed. Retry?</string>
    <string name="msg_google_signin_canceled_by_user">You have been canceled the Google sign-in. The app cannot proceed. Retry?</string>
    <string name="msg_google_client_connection_error">Cannot connect to Google while signing in. The app cannot proceed. Retry?</string>
    <string name="msg_firebase_unknown_error">Unknown error while storing the data to Google. The app cannot proceed. Retry?</string>
    <string name="msg_firebase_client_connection_error">Cannot connect to Google while signing in. The app cannot proceed. Retry?</string>
    <string name="msg_fatal_error">Cannot continue</string>
    <string name="nav_action_invite">Invite</string>
    <string name="nav_action_locate">Locate</string>
    <string name="nav_action_budget">Budget</string>
    <string name="notification_channel_general_name">General notifications</string>
    <string name="notification_channel_general_description">General notifications</string>
    <string name="notification_location_request_received_title">Location requested</string>
    <string name="notification_location_request_received_text">Your family member has requested your location</string>
    <string name="word_someone">Someone</string>
</resources>
