<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.InitialMinorAcceptInviteFragment">

    <include
        layout="@layout/content_waiting"
        android:id="@+id/layout_waiting"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/imageView_background"
        style="@style/App.ImageView.Background"
        android:contentDescription="@string/desc_page_background"/>

    <LinearLayout
        android:id="@+id/layout_content_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/textView_invitation"
            style="@style/App.TextView"
            android:text="@string/msg_invitation"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_accept_invite"
            style="@style/App.Button"
            android:text="@string/action_accept_invite"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_decline_invite"
            style="@style/App.Button"
            android:text="@string/action_decline_invite"/>

    </LinearLayout>

</FrameLayout>