<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.InitialCommonSetupFragment">

    <ImageView
        android:id="@+id/imageView_background"
        style="@style/App.ImageView.Background"
        android:contentDescription="@string/desc_page_background"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_i_am_major"
            style="@style/App.Button"
            android:text="@string/action_i_am_major"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_i_am_minor"
            style="@style/App.Button"
            android:text="@string/action_i_am_minor"/>

    </LinearLayout>
</FrameLayout>