<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.MinorDummyFragment">

    <ImageView
        android:id="@+id/imageView_background"
        style="@style/App.ImageView.Background"
        android:contentDescription="@string/desc_page_background"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_send_my_location"
            style="@style/App.Button"
            android:text="@string/action_send_location"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_check_family_membership"
            style="@style/App.Button"
            android:text="@string/action_check_family_membership"/>

    </LinearLayout>

</FrameLayout>