<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.fragment.MajorDummyFragment">

    <include
        layout="@layout/content_background_general"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_create_family_member"
            style="@style/App.Button"
            android:text="@string/action_create_family_member"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_delete_family_member"
            style="@style/App.Button"
            android:text="@string/action_delete_family_member"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_send_invite"
            style="@style/App.Button"
            android:text="@string/action_send_invite"/>

    </LinearLayout>

</FrameLayout>